--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "remixicon": "^2.5.0",
     "vue": "^2.7.8",
     "vue-slick-carousel": "^1.0.6"
   },
